--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -17,7 +17,8 @@
             <div class="header-right">
                 <a href="#om oss">Om oss</a>
                 <a href="#kundtjänst">Kundtjänst</a>
-                <a href="#login"><img></a>
+                <a href="#login" class="shop_login"> <img src="login.png"></a>
+                <a href="#shopcart" class="shop_login"><img src="shopingcart.png"></a>
             </div>
         </div>
     </header>
