--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -12,18 +12,30 @@
 </head>
 <body>
     <header>
-        <div class="header">
-            <a href="#default" class="logo"><img src="loggo and text.png" alt="logo with the name of the site"></a>
+        <div class="firts-header">
+            <a href="Pixel_world.html" class="logo"><img src="loggo and text.png" alt="logo with the name of the site"></a>
             <div class="header-right">
-                <a href="#om oss">Om oss</a>
-                <a href="#kundtjänst">Kundtjänst</a>
+                <span>
+                    <a href="#about us">About us</a>
+                    <a href="#contact">Contact</a> 
+                </span>
                 <a href="#login" class="shop_login"> <img src="login.png"></a>
                 <a href="#shopcart" class="shop_login"><img src="shopingcart.png"></a>
             </div>
         </div>
     </header>
+    <div class="second-header">
+        <a href="Pixel_world.html" class="logo"><img src="loggo.png" alt="logo"></a>
+        <div class="header-rightSecond">
+            <a href="Pixel_world.html">Home</a>
+            <a href="#games">Games</a>
+            <input type="search" placeholder="Search">
+            <img src="arrow.png" alt="arrow for search">
+        </div>
+    </div>
+
     <main>
-        <h1>vvrev<br>g<br>fd<br>dejd<br> jd3ni3<br> ndi3nd<br> n3inod<br>ere<br> jas<br> eijde<br>njbniw<br>bdeb<br>bub<br>nided<br>nkence<br></h1>
+
     </main>
     <footer>
     
