--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="firts-header">
+        <div id="firts-header">
             <a href="Pixel_world.html" class="logo"><img src="loggo and text.png" alt="logo with the name of the site"></a>
             <div class="header-right">
                 <span>
@@ -27,7 +27,7 @@
     <div class="second-header">
         <a href="Pixel_world.html" class="logo"><img src="loggo.png" alt="logo"></a>
         <div class="header-rightSecond">
-            <a href="Pixel_world.html">Home</a>
+            <a href="#firts-header">Home</a>
             <a href="#games">Games</a>
             <input type="search" placeholder="Search">
             <img src="arrow.png" alt="arrow for search">
