--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="firts-header">
+        <div id="firts-header">
             <a href="Pixel_world.html" class="logo"><img src="loggo and text.png" alt="logo with the name of the site"></a>
             <div class="header-right">
                 <span>
@@ -27,14 +27,21 @@
     <div class="second-header">
         <a href="Pixel_world.html" class="logo"><img src="loggo.png" alt="logo"></a>
         <div class="header-rightSecond">
-            <a href="Pixel_world.html">Home</a>
-            <a href="games.html">Games</a>
+            <a href="#firts-header">Home</a>
+            <a href="games.html" class="active">Games</a>
             <input type="search" placeholder="Search">
             <img src="arrow.png" alt="arrow for search">
         </div>
     </div>
     <main>
+        <section id="choseGame">
+            <div class="convinientStore">
 
+            </div>
+            <div class="unnamed">
+                <img src="unnamedShort.png" alt="game img for unnamed game"> 
+            </div>
+        </section>
     </main>
     <footer>
     
