--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Pixel World </title>
     <link rel="stylesheet" href="style_PixelWorld.css">
+    <link rel="javaScript" href="pixel_script.js">
     <!--google font for main:jersy 10 headlines: pixelfy sans accsent: doto-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
     <div class="second-header">
         <a href="Pixel_world.html" class="logo"><img src="loggo.png" alt="logo"></a>
         <div class="header-rightSecond">
-            <a href="Pixel_world.html">Home</a>
+            <a href="Pixel_world.html"><span>Home</span></a>
             <a href="games.html">Games</a>
             <input type="search" placeholder="Search">
             <img src="arrow.png" alt="arrow for search">
