text not showing up

--- a/games.html
+++ b/games.html
@@ -36,13 +36,19 @@
     </div>
     <main>
         <section id="choseGame">
-            <h1> Our Games</h1>
+            <h1> Our Games </h1>
             <div class="game1"> <!--not so convinient store-->
-                <button type="button" onclick="showGame('convinentstore')"> </button> <!-- i figured out the button but chat gpt sonected it to the script corectly-->
+                <a onclick="showGame('convinentstore')">
+                    <img src="storegame2.png" alt="game img for not so convinent store game">
+                    
+                </a> <!-- i figured out the img but chat gpt sonected it to the script corectly-->
 
             </div>
             <div class="game2"><!--Cybr grl idle adventurz-->
-                <a onclick="showGame('Cybr')"><img src="CybrShort.png" alt="game img for Cybr grl idle adventurz game"> </a> <!-- i figured out the img but chat gpt sonected it to the script corectly-->
+                <a onclick="showGame('Cybr')">
+                    <img src="CybrShort.png" alt="game img for Cybr grl idle adventurz game">
+                    <p>Cybr grl idle adventurz</p>
+                </a> <!-- i figured out the img but chat gpt sonected it to the script corectly-->
             </div>
         </section>
         <section id="convinentstore">
