text showing up

--- a/games.html
+++ b/games.html
@@ -40,14 +40,14 @@
             <div class="game1"> <!--not so convinient store-->
                 <a onclick="showGame('convinentstore')">
                     <img src="storegame2.png" alt="game img for not so convinent store game">
-                    
+                    <p> Not So Convinent Store</p>
                 </a> <!-- i figured out the img but chat gpt sonected it to the script corectly-->
 
             </div>
             <div class="game2"><!--Cybr grl idle adventurz-->
                 <a onclick="showGame('Cybr')">
                     <img src="CybrShort.png" alt="game img for Cybr grl idle adventurz game">
-                    <p>Cybr grl idle adventurz</p>
+                    <p>Cybr Grl Idle Adventurz</p>
                 </a> <!-- i figured out the img but chat gpt sonected it to the script corectly-->
             </div>
         </section>
