imges+ game1 game2 working +main
some more imges and both game1 and game2 works. main section aka home page got a welcome part

--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -35,10 +35,21 @@
         </div>
     </div>
     <main>
-        
+        <section id="welcome">
+
+            <h1>Welcome To Pixel world </h1>
+            <p>Your inde game publisher <br> new relised inde games made by small game developers in progress</progress></p>
+        </section>
     </main>
     <footer>
-    
+        <div class="left">
+            <h2> games </h2>
+            <p>Not So convinient store</p>
+            <p>Cybr Grl Idle Adventurz</p>
+        </div>
+        <div class="right">
+
+        </div>
     </footer>
 </body>
 
