--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
             <h2>Not So convinient store</h2>
         </section>
         <section id="Cybr">
-            
+            <h2>Cybr Grl Idle Adventurz</h2>
         </section>
     </main>
 
