--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Pixel World </title>
     <link rel="stylesheet" href="style_PixelWorld.css">
-    <link rel="javaScript" href="pixel_script.js">
     <!--google font for main:jersy 10 headlines: pixelfy sans accsent: doto-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,9 +45,29 @@
             <h2> games </h2>
             <p>Not So convinient store</p>
             <p>Cybr Grl Idle Adventurz</p>
+
+        </div>
+        <div class="middel1">
+            <h2> contact </h2>
+            <p> +46 0123456789 </p>
+            <p> email@pixelWorld.com </p>
+
+        </div>
+        <div class="middel2">
+            <h2>contribute</h2>
+            <p>inde game publish?</p>
+            <p>interested?</p>
         </div>
         <div class="right">
-
+            <h2> about us</h2>
+            <p>values</p>
+            <p>game styles</p>
+        </div>
+        <div class="copyright">
+            <h2>copyright</h2>
+            <p> updated: 2026-02-13</p>
+            <p>@ 2026 Pixel_world</p>
+            
         </div>
     </footer>
 </body>
