--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Pixel World </title>
     <link rel="stylesheet" href="style_PixelWorld.css">
-    <!--google font for main:jersy 10 headlines: pixelfy sans accsent: doto-->
+    <!--google font for main:jersy 10 headlines: pixelfy sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Jersey+10&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
             <a href="Pixel_world.html" class="logo"><img src="loggo and text.png" alt="logo with the name of the site"></a>
             <div class="header-right">
                 <span>
-                    <a href="#about us">About us</a>
-                    <a href="#contact">Contact</a> 
+                    <a href="#Aboutus">About us</a>
+                    <a href="#right">Contact</a> 
                 </span>
                 <a href="#login" class="shop_login"> <img src="login.png"></a>
                 <a href="#shopcart" class="shop_login"><img src="shopingcart.png"></a>
@@ -39,6 +39,13 @@
             <h1>Welcome To Pixel world </h1>
             <p>Your inde game publisher <br> new relised inde games made by small game developers in progress</progress></p>
         </section>
+
+        <section id="Aboutus">
+            <h1>Pixel Wrold shows of small inde games<br>
+                to build a bigger comunity</h1>
+            <p>We are a Company that thrives on developing and selling small inde games. <br>
+                from our owns game makers but also from other small game developers.</p>
+        </section>
     </main>
     <footer>
         <div class="left">
@@ -58,7 +65,7 @@
             <p>inde game publish?</p>
             <p>interested?</p>
         </div>
-        <div class="right">
+        <div id="right">
             <h2> about us</h2>
             <p>values</p>
             <p>game styles</p>
