--- a/games.html
+++ b/games.html
@@ -53,9 +53,10 @@
             </div>
         </section>
         <section id="convinentstore">
-            <h2>Not So convinient store</h2>
-            <img src="star_rating.png" alt="rating for the game">
-
+            <div class="game_review">
+                <h2>Not So convinient store</h2>
+                <img src="star_rating.png" alt="rating for the game">
+        </div>
 
             <!-------stor silideshow--------->
 
@@ -63,20 +64,20 @@
 
                 <div class="storeSlides">
                     <div class="numbertext">1 / 3</div>
-                    <img src="storegame1.png" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <img src="storegame3.png" style="width:100%">
+                    <div class="text">restocking shelfs</div>
                 </div>
 
                 <div class="storeSlides">
                     <div class="numbertext">2 / 3</div>
                     <img src="storegame2.png" style="width:100%">
-                    <div class="text">Caption Two</div>
+                    <div class="text">Getting scolded</div>
                 </div>
 
                 <div class="storeSlides">
                     <div class="numbertext">3 / 3</div>
                     <img src="crying_store.png" style="width:100% ">
-                    <div class="text">Caption Three</div>
+                    <div class="text">crying in a corner</div>
                 </div>
 
                 <a class="prev" onclick="storePlusSlides(-1)">&#10094;</a>
@@ -85,7 +86,7 @@
                 <br>
 
 
-                <div style="text-align:center">
+                <div style="margin-left: 26vw;">
                 <span class="storedot" onclick="storeCurrentSlide(1)"></span>
                 <span class="storedot" onclick="storeCurrentSlide(2)"></span>
                 <span class="storedot" onclick="storeCurrentSlide(3)"></span>
@@ -95,31 +96,34 @@
                 <p>by for: 160kr</p>
             </button>
             <div class="description">
-
+                <p>You are broke and sad so a job is needed, you apply for a convenient store that's hiring.<br>
+                     All you need to do is stock all the shelfs before your shift is over, good luck.
+                </p>
             </div>
         </section>
         <section id="Cybr">
-            <h2>Cybr Grl Idle Adventurz</h2>
-            <img src="star_rating.png" alt="rating for the game">
+            <div class="game_review">
+                <h2>Cybr Grl Idle Adventurz</h2>
+                <img src="star_rating.png" alt="rating for the game">
+            </div>
                 <!-------cybr silideshow--------->
             <div class="slideshow-container"> <!-- disclamer i did not program the slide show i found and copypasted from w3school i have read trough it and understand most of it*-->
 
                 <div class="cybrSlides">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="CybrShort.png" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <img src="cybrgame2.png" style="width:100%">
+                    <div class="text">cybr world</div>
                 </div>
 
                 <div class="cybrSlides">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="loggo and text.png" style="width:100%">
-                    <div class="text">Caption Two</div>
+               
+                    <img src="cybrgame1.png" style="width:100%">
+                    <div class="text">shoping menu</div>
                 </div>
 
                 <div class="cybrSlides">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="cybrlongfaded.png" style="width:100% ">
-                    <div class="text">Caption Three</div>
+            
+                    <img src="cybrgame3.png" style="width:100% ">
+                    <div class="text">cybr fight</div>
                 </div>
 
                 <a class="prev" onclick="cybrPlusSlides(-1)">&#10094;</a>
@@ -128,7 +132,7 @@
                 <br>
 
 
-                <div style="text-align:center">
+                <div style="margin-left: 26vw;">
                 <span class="cybrdot" onclick="cybrCurrentSlide(1)"></span>
                 <span class="cybrdot" onclick="cybrCurrentSlide(2)"></span>
                 <span class="cybrdot" onclick="cybrCurrentSlide(3)"></span>
@@ -138,6 +142,12 @@
                 <p>by for: free</p>
             </button>
             <div class="description">
+                <p>Cyber girl idle adventure - ett spel som utspelar sig i den digitala världen. <br>
+                    Du är ett virus som har trängt in i systemet och färdas genom kablar, där du bekämpar olika antivirusprogram <br>¨
+                    samtidigt som du samlar på "emmacoins" för att köpa uppgrades på the dark web. <br>
+                    Spelet domineras av kalla färger, vilket skapar en retro, cyberpunk känsla. <br>
+                    Målet med spelet är att uppgradera karaktären fullständigt för att besegra eldväggen, spelets boss, och infiltreta datorer.
+                </p>
             </div>
         </section>
     </main>
