--- a/Pixel_world.html
+++ b/Pixel_world.html
@@ -12,49 +12,50 @@
 </head>
 <body>
     <header>
-        <div class="firts-header">
+        <div class="firts-header"> <!-- header that contains  the main logo and the bsic links -->
             <a href="Pixel_world.html" class="logo"><img src="loggo and text.png" alt="logo with the name of the site"></a>
-            <div class="header-right">
-                <span>
+            <div class="header-right"><!--insded first header to seperate the diffrent links-->
+                <span>              <!-- text links that link to difrent farts of the main page-->
                     <a href="#Aboutus">About us</a>
                     <a href="#right">Contact</a> 
                 </span>
+                    <!--img that links to noting-->
                 <a href="#login" class="shop_login"> <img src="login.png"></a>
                 <a href="#shopcart" class="shop_login"><img src="shopingcart.png"></a>
             </div>
         </div>
     </header>
-    <div class="second-header">
+    <div class="second-header">     <!-- header that sticks through out the page an contains links and search-->
         <a href="Pixel_world.html" class="logo"><img src="loggo.png" alt="logo"></a>
         <div class="header-rightSecond">
-            <a href="Pixel_world.html"><span>Home</span></a>
-            <a href="games.html">Games</a>
-            <input type="search" placeholder="Search">
+            <a href="Pixel_world.html"><span>Home</span></a> <!-- span for the active page-->
+            <a href="games.html">Games</a>      <!-- goes to game page-->
+            <input type="search" placeholder="Search"> <!--basic search bar-->
             <img src="arrow.png" alt="arrow for search">
         </div>
     </div>
     <main>
-        <section id="welcome">
+        <section id="welcome">  <!-- section that makes the intruduction to what the website is about -->
 
             <h1>Welcome To Pixel world </h1>
             <p>Your inde game publisher <br> new relised inde games made by small game developers in progress</progress></p>
         </section>
 
-        <section id="Aboutus">
+        <section id="Aboutus">   <!--section that links from header about us-->
             <h1>Pixel Wrold shows of small inde games<br>
                 to build a bigger comunity</h1>
             <p>We are a Company that thrives on developing and selling small inde games. <br>
                 from our owns game makers but also from other small game developers.</p>
         </section>
     </main>
-    <footer>
-        <div class="left">
+    <footer>    <!-- basic footer-->
+        <div class="left">  
             <h2> games </h2>
             <p>Not So convinient store</p>
             <p>Cybr Grl Idle Adventurz</p>
 
         </div>
-        <div class="middel1">
+        <div class="middel1">       <!--linked to the first header contact-->
             <h2> contact </h2>
             <p> +46 0123456789 </p>
             <p> email@pixelWorld.com </p>
